# typst-plugin-bigrational

./: .gitignore  Cargo.toml  README.md  _typos.toml  rational.typ
src/: lib.rs
