[package]
name = "typst-plugin-bigrational"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
panic = "abort"

[dependencies]
num-bigint = "0.4.6"
num-decimal = { version = "0.2.5", default-features = false, features = ["num-v04"] }
num-rational = "0.4.2"
wasm-minimal-protocol = "0.1.0"
